# pemonlist-site

./: .example.env  .gitignore  Cargo.toml  ReadMe.md  startDB.bat  transfer.py
.github/workflows/: build.yml  test.yml  thing.yml
dbschema/: default.esdl
site/: account.html  credits.html  duplicate.html  fallback.html  footer.html  index.html  leaderboard.html  level.html  migrate.html  mod.html  modlevels.html  modrecords.html  modusers.html  oauth.html  player.html  privacy.html  profile.html  recordaccept.html  robots.txt  rules.html  script.js  settings.html  setup.html  style.css  submit.html  submitted.html  terms.html
site/meta/: oembed.json  site.webmanifest
site/src/css/: account.scss  credits.scss  fallback.scss  footer.css  footer.css.map  footer.min.css  footer.min.css.map  footer.scss  index.css  index.css.map  index.min.css  index.min.css.map  index.scss  leaderboard.css  leaderboard.css.map  leaderboard.min.css  leaderboard.min.css.map  leaderboard.scss  legal.scss  level.css  level.css.map  level.min.css  level.min.css.map  level.scss  list.css  list.css.map  list.min.css  list.min.css.map  list.scss  main.css  main.css.map  main.min.css  main.min.css.map  main.scss  mod.scss  modlevels.scss  modrecords.scss  modusers.scss  nav.css  nav.css.map  (+10 more)
site/src/img/: crown.pdn  opengraph.pdn
site/src/js/: account.js  jump.js  leaderboard.js  level.js  list.js  main.js  migrate.js  modlevels.js  (+8 more)
site/template/: footer.html  include.html  meta.html  nav.html
src/: db.rs  main.rs  routes.rs  util.rs
src/endpoints/: level.rs  mod.rs  profile.rs
(+44 files in other folders)
