[package]
name = "platformer-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
edgedb-derive = "0.5.1"
edgedb-protocol = "0.6.0"
edgedb-tokio = {version = "0.5.0", features = ["derive"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
